--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -1,15 +1,12 @@
 [parameters]
-    database_driver=pdo_mysql
-    database_host=localhost
-    database_name=symfony
-    database_user=root
-    database_password=
-
-    mailer_transport=smtp
-    mailer_host=localhost
-    mailer_user=
-    mailer_password=
-
-    locale=en
-
-    csrf_secret=xxxxxxxxxx
+    database_driver="pdo_mysql"
+    database_host="localhost"
+    database_name="clubmaster_v2"
+    database_user="root"
+    database_password=""
+    mailer_transport="smtp"
+    mailer_host="localhost"
+    mailer_user=""
+    mailer_password=""
+    locale="en"
+    csrf_secret="f59126f7bcd316fa9df22c80c6e33435"
