--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -47,7 +47,7 @@ doctrine:
         entity_managers:
             default:
                 mappings:
-                    AcmeDemo: ~
+                    ClubUser: ~
 
 # Swiftmailer Configuration
 swiftmailer:
