--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,2 @@
-_welcome:
-    pattern:  /
-    defaults: { _controller: AcmeDemo:Welcome:index }
-
-_demo_secured:
-    resource: "@AcmeDemo/Controller/SecuredController.php"
-    type:     annotation
-
-_demo:
-    resource: "@AcmeDemo/Controller/DemoController.php"
-    type:     annotation
-    prefix:   /demo
+user:
+        resource: "@ClubUser/Resources/config/routing.yml"
