--- a/src/Club/UserBundle/Resources/config/routing.yml
+++ b/src/Club/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-#homepage:
-#    pattern:  /
-#    defaults: { _controller: ClubUserBundle:Default:index }
+homepage:
+    pattern:  /
+    defaults: { _controller: ClubUser:Default:index }
