--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.LoginAttempt.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.LoginAttempt.dcm.yml
@@ -1,6 +1,6 @@
 Club\UserBundle\Entity\LoginAttempt:
   type: entity
-  table: null
+  table: club_login_attempt
   fields:
     id:
       type: integer
