--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileCompany.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileCompany.dcm.yml
@@ -1,6 +1,6 @@
 Club\UserBundle\Entity\ProfileCompany:
   type: entity
-  table: null
+  table: club_profile_company
   fields:
     id:
       type: integer
