Added a table for users Added more columns on user model

--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
@@ -17,6 +17,18 @@ Club\UserBundle\Entity\User:
     password:
       type: string
       length: '255'
+    language_id:
+      type: string
+      length: '255'
+    last_login_time:
+      type: date
+    last_login_ip:
+      type:
+      string: '100'
+    login_count:
+      type: integer
+      nullable: false
+      default: 0
   oneToOne:
     profile:
       targetEntity: Club\UserBundle\Entity\Profile
