Made userform Made the user new and create action

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,2 +1,6 @@
+homepage:
+  pattern: /
+  defaults: { _controller: ClubUser:Default:index }
+
 user:
         resource: "@ClubUser/Resources/config/routing.yml"
