--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
@@ -23,7 +23,7 @@ Club\UserBundle\Entity\User:
     last_login_time:
       type: date
     last_login_ip:
-      type:
+      type: string
       string: '100'
     login_count:
       type: integer
