Fixed ORM models

--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileEmail.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileEmail.dcm.yml
@@ -7,4 +7,8 @@ Club\UserBundle\Entity\ProfileEmail:
       id: true
       generator:
         strategy: AUTO
+    profile_id: { type: integer, nullable: false }
+    email_address: { type: string(255), nullable: false }
+    contact_type: { type: string(20), nullable: false }
+    is_default: { type: boolean, nullable: false }
   lifecycleCallbacks: {  }
