--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Ban.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Ban.dcm.yml
@@ -7,4 +7,9 @@ Club\UserBundle\Entity\Ban:
       id: true
       generator:
         strategy: AUTO
+    user_id: { type: integer, nullable: false } # who has made the ban
+    type: { type: string(50), nullable: false }
+    value: { type: string(255), nullable: false }
+    expire_date: { type: date, nullable: false }
+    note: { type: string(1000) }
   lifecycleCallbacks: {  }
