--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Group.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Group.dcm.yml
@@ -7,4 +7,10 @@ Club\UserBundle\Entity\Group:
       id: true
       generator:
         strategy: AUTO
+    grup_name: { type: string, lenght: 255, nullable: false }
+    group_type: { type: string, length: 255, nullable: false }
+    sex: { type: string, length: 255 }
+    min_age: { type: integer }
+    max_age: { type: integer }
+    is_active: { type: boolean, nullable: false, default: true }
   lifecycleCallbacks: {  }
