--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Location.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Location.dcm.yml
@@ -7,4 +7,5 @@ Club\UserBundle\Entity\Location:
       id: true
       generator:
         strategy: AUTO
+    location_name: { type: string(255), nullable: false }
   lifecycleCallbacks: {  }
