--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileAddress.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileAddress.dcm.yml
@@ -7,4 +7,13 @@ Club\UserBundle\Entity\ProfileAddress:
       id: true
       generator:
         strategy: AUTO
+    profile_id: { type: integer, nullable: false }
+    street: { type: string(255) }
+    suburl: { type: string(255) }
+    postal_code: { type: string(255) }
+    city: { type: string(255) }
+    state: { type: string(255) }
+    country: { type: string(255) }
+    contact_type: { type: string(20), nullable: false }
+    is_default: { type: boolean, nullable: false }
   lifecycleCallbacks: {  }
