--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileCompany.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.ProfileCompany.dcm.yml
@@ -7,4 +7,8 @@ Club\UserBundle\Entity\ProfileCompany:
       id: true
       generator:
         strategy: AUTO
+    profile_id: { type: integer, nullable: false }
+    company_name: { type: string(255), nullable: false }
+    cvr: { type: string(50) }
+    is_default: { type: boolean, nullable: false }
   lifecycleCallbacks: {  }
