--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Ban.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Ban.dcm.yml
@@ -11,5 +11,5 @@ Club\UserBundle\Entity\Ban:
     type: { type: string(50), nullable: false }
     value: { type: string(255), nullable: false }
     expire_date: { type: date, nullable: false }
-    note: { type: string(1000) }
+    note: { type: string(1000), nullable: true }
   lifecycleCallbacks: {  }
