--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
@@ -7,16 +7,18 @@ Club\UserBundle\Entity\User:
       id: true
       generator:
         strategy: AUTO
-    profile_id: { type: integer, nullable: false }
-    username: { type: string(255), nullable: false }
+    username: { type: string(255) }
     password: { type: string(255) }
-    language_id: { type: string(255) }
-    last_login_time: { type: date }
-    last_login_ip: { type: string, string: '100' }
+    language_id: { type: string(255), nullable: true }
+    last_login_time: { type: date, nullable: true }
+    last_login_ip: { type: string, string: '100', nullable: true }
+    created_at: { type: date, nullable: true }
+    updated_at: { type: date, nullable: true }
   oneToOne:
     profile:
       targetEntity: Club\UserBundle\Entity\Profile
-      joinColumns:
-        profile_id:
-          referencedColumnName: id
+      cascade: [remove]
+      joinColumn:
+        name: profile_id
+        referencedColumnName: id
   lifecycleCallbacks: {  }
