Added annotation routes and templates to Default Controller in userbundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,4 +3,8 @@ homepage:
   defaults: { _controller: ClubUser:Default:index }
 
 user:
-        resource: "@ClubUser/Resources/config/routing.yml"
+  resource: "@ClubUser/Resources/config/routing.yml"
+
+_user:
+  resource: "@ClubUser/Controller/DefaultController.php"
+  type: annotation
