Started on the security filter

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,10 +7,8 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            users:
-                user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        main:
+          entity: { class: Club\UserBundle\Model\UserManager, property: _username }
 
     firewalls:
         profiler:
@@ -22,21 +20,18 @@ security:
             security: false
 
         login:
-            pattern:  ^/demo/secured/login$
+            pattern: ^/login
             security: false
 
-        secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: /demo/secured/login_check
-                login_path: /demo/secured/login
-            logout:
-                path:   /demo/secured/logout
-                target: /demo/
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+        login_check:
+            pattern: ^/login_check
+            security: false
 
+        main:
+            security: true
+            http_basic: true
+            #form_login: true
+            logout: true
 
     access_control:
         #- { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
