--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,37 +1,29 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        Club\UserBundle\Entity\User:
+            algorithm: sha512
+            encode-as-base64: true
+            iterations: 10
 
     providers:
         main:
-          entity: { class: Club\UserBundle\Model\UserManager, property: _username }
+          entity: { class: Club\UserBundle\Entity\User, property: username }
 
     firewalls:
         profiler:
-            pattern:  ^/_profiler
-            security: false
-
+          pattern: ^/_profiler.*
+          security: false
         wdt:
-            pattern:  ^/_wdt
-            security: false
-
-        login:
-            pattern: ^/login
-            security: false
-
-        login_check:
-            pattern: ^/login_check
-            security: false
-
+          pattern: ^/_wdt
+          security: false
         main:
-            security: true
-            http_basic: true
-            #form_login: true
+            form_login:
+                check_path: /login_check
+                login_path: /login
+            #http_basic: true
             logout: true
-
+            security: true
+            anonymous: true
     access_control:
-        #- { path: /login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        #- { path: /admin/.*, role: ROLE_ADMIN }
+        #- { path: /.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
