--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
@@ -12,6 +12,12 @@ Club\UserBundle\Entity\User:
     language_id: { type: string(255), nullable: true }
     last_login_time: { type: date, nullable: true }
     last_login_ip: { type: string, string: '100', nullable: true }
+    enabled: { type: boolean }
+    algorithm: { type: string }
+    salt: { type: string }
+    locked: { type: boolean }
+    expired: { type: boolean }
+    expires_at: { type: date, nullable: true }
     created_at: { type: date, nullable: true }
     updated_at: { type: date, nullable: true }
   oneToOne:
@@ -21,4 +27,15 @@ Club\UserBundle\Entity\User:
       joinColumn:
         name: profile_id
         referencedColumnName: id
+  manyToMany:
+    user_roles:
+      targetEntity: Club\UserBundle\Entity\Role
+      joinTable:
+        name: club_user_role
+        joinColumns:
+          role_id:
+            referencedColumnName: id
+        inverseJoinColumns:
+          user_id:
+            referencedColumnName: id
   lifecycleCallbacks: {  }
