Added a lot of fields to the data model

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -48,6 +48,8 @@ doctrine:
             default:
                 mappings:
                     ClubUser: ~
+                    ClubMail: ~
+                    ClubShop: ~
 
 # Swiftmailer Configuration
 swiftmailer:
