--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,5 +24,5 @@ security:
             security: true
             anonymous: true
     access_control:
-        - { path: /login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /.*, role: ROLE_ADMIN }
+        #- { path: /login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: /.*, role: ROLE_ADMIN }
