--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -32,3 +32,7 @@ _auth:
   resource: "@ClubUserBundle/Controller/AuthController.php"
   type: annotation
 
+_rest:
+  resource: "@ClubRestBundle/Controller/DefaultController.php"
+  type: annotation
+  prefix: /rest
