Support for add user in API.

--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
@@ -31,4 +31,5 @@ Club\UserBundle\Entity\User:
   manyToMany:
     mails:
       targetEntity: Club\MailBundle\Entity\Mail
-  lifecycleCallbacks: {  }
+  lifecycleCallbacks:
+    prePersist: [ prePersist ]
