Added cascade delete on user->profile

--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Profile.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Profile.dcm.yml
@@ -12,4 +12,8 @@ Club\UserBundle\Entity\Profile:
   oneToOne:
     user:
       targetEntity: User
+      joinColumn:
+        name: user_id
+        referencedColumnName: id
+        onDelete: cascade
   lifecycleCallbacks: {  }
