--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.User.dcm.yml
@@ -22,6 +22,10 @@ Club\UserBundle\Entity\User:
   oneToOne:
     profile:
       targetEntity: Profile
+      joinColumn:
+        name: profile_id
+        referencedColumnName: id
+        onDelete: cascade
   manyToMany:
     roles:
       targetEntity: Role
