Added get users, and ban user calls.

--- a/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Ban.dcm.yml
+++ b/src/Club/UserBundle/Resources/config/doctrine/metadata/orm/Club.UserBundle.Entity.Ban.dcm.yml
@@ -14,4 +14,5 @@ Club\UserBundle\Entity\Ban:
   manyToOne:
     user:
       targetEntity: User
-  lifecycleCallbacks: {  }
+  lifecycleCallbacks:
+    prePersist: [ prePersist ]
