Started to write entities to annotations.

--- a/src/Club/ShopBundle/Resources/config/doctrine/metadata/orm/Club.ShopBundle.Entity.ShopOrder.dcm.yml
+++ b/src/Club/ShopBundle/Resources/config/doctrine/metadata/orm/Club.ShopBundle.Entity.ShopOrder.dcm.yml
@@ -22,4 +22,5 @@ Club\ShopBundle\Entity\ShopOrder:
   manyToOne:
     shop_payment_method:
       targetEntity: ShopPaymentMethod
-  lifecycleCallbacks: {  }
+  lifecycleCallbacks:
+    prePersist: [ prePersist ]
