--- a/src/Club/ShopBundle/Resources/config/doctrine/metadata/orm/Club.ShopBundle.Entity.Subscription.dcm.yml
+++ b/src/Club/ShopBundle/Resources/config/doctrine/metadata/orm/Club.ShopBundle.Entity.Subscription.dcm.yml
@@ -11,7 +11,7 @@ Club\ShopBundle\Entity\Subscription:
     expire_date: { type: datetime }
     allowed_pauses: { type: integer }
     auto_renewal: { type: boolean }
-  manyToOne:
-    user:
+  manyToMany:
+    users:
       targetEntity: Club\UserBundle\Entity\User
   lifecycleCallbacks: {  }
