Added shop controller Split index page into peaces

--- a/src/Club/ShopBundle/Resources/config/routing.yml
+++ b/src/Club/ShopBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+_shop:
+  resource: "@ClubShopBundle/Controller/ShopController.php"
+  type: annotation
+
 _shop_category:
   resource: "@ClubShopBundle/Controller/CategoryController.php"
   type: annotation
