Create users correct from rest.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -25,4 +25,5 @@ security:
             anonymous: true
     access_control:
         - { path: /login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /rest.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /.*, role: ROLE_ADMIN }
