--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,6 +24,6 @@ security:
             security: true
             anonymous: true
     access_control:
-        - { path: /login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /rest.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /.*, role: ROLE_ADMIN }
