Restructured a lot of entities due to create user Renamed username to member_number for better support

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,7 +7,7 @@ security:
 
     providers:
         main:
-          entity: { class: Club\UserBundle\Entity\User, property: username }
+          entity: { class: Club\UserBundle\Entity\User, property: member_number }
 
     firewalls:
         profiler:
