Renamed basket to cart And moved cart to database instead of session handled

--- a/src/Club/ShopBundle/Resources/config/config.yml
+++ b/src/Club/ShopBundle/Resources/config/config.yml
@@ -1,4 +1,4 @@
 services:
-  basket:
-    class: Club\ShopBundle\Util\Basket
-    arguments: [@doctrine.orm.entity_manager,@session]
+  cart:
+    class: Club\ShopBundle\Util\Cart
+    arguments: [@doctrine.orm.entity_manager,@session,@security.context]
