Added entity manger to user listerner.

--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -1,5 +1,6 @@
 services:
   club.userbundle.listener.request:
     class: Club\UserBundle\Listener\RequestListener
+    arguments: [@doctrine.orm.entity_manager]
     tags:
       - { name: kernel.listener, event: onCoreRequest }
