--- a/src/Club/MailBundle/Resources/config/routing.yml
+++ b/src/Club/MailBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-#homepage:
-#    pattern:  /
-#    defaults: { _controller: ClubMailBundle:Default:index }
+_mail:
+  resource: "@ClubMailBundle/Controller/DefaultController.php"
+  type: annotation
