--- a/src/Club/UserBundle/Resources/config/routing.yml
+++ b/src/Club/UserBundle/Resources/config/routing.yml
@@ -31,3 +31,7 @@ _auth:
 _ban:
   resource: "@ClubUserBundle/Controller/BanController.php"
   type: annotation
+
+_config:
+  resource: "@ClubUserBundle/Controller/ConfigController.php"
+  type: annotation
