--- a/src/Club/ShopBundle/Resources/config/config.yml
+++ b/src/Club/ShopBundle/Resources/config/config.yml
@@ -1,4 +1,4 @@
 services:
   cart:
     class: Club\ShopBundle\Util\Cart
-    arguments: [@doctrine.orm.entity_manager,@session,@security.context]
+    arguments: [@doctrine.orm.entity_manager,@session,@security.context,@event_dispatcher]
