--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -4,3 +4,8 @@ services:
     arguments: [@doctrine.orm.entity_manager]
     tags:
       - { name: kernel.listener, event: onShopOrder }
+  club.shopbundle.listener.on_order_change_listener:
+    class: Club\ShopBundle\Listener\OrderChangeListener
+    arguments: [@doctrine.orm.entity_manager]
+    tags:
+      - { name: kernel.listener, event: onOrderChange }
