Fixed add subscription or ticket after product delivered.

--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -9,3 +9,8 @@ services:
     arguments: [@doctrine.orm.entity_manager]
     tags:
       - { name: kernel.listener, event: onOrderChange }
+  club.shopbundle.listener.new_subscription_listener:
+    class: Club\ShopBundle\Listener\NewSubscriptionListener
+    arguments: [@doctrine.orm.entity_manager]
+    tags:
+      - { name: kernel.listener, event: onOrderChange }
