--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,6 +5,9 @@ security:
             encode-as-base64: true
             iterations: 10
 
+    role_hierarchy:
+      ROLE_ADMIN: ROLE_USER
+
     providers:
         main:
           entity: { class: Club\UserBundle\Entity\User, property: member_number }
@@ -26,4 +29,5 @@ security:
     access_control:
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /rest.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /.*, role: ROLE_ADMIN }
+        - { path: /.*, roles: 'ROLE_USER' }
+        - { path: /admin/.*, roles: 'ROLE_ADMIN' }
