--- a/src/Club/ShopBundle/Resources/config/routing.yml
+++ b/src/Club/ShopBundle/Resources/config/routing.yml
@@ -14,6 +14,10 @@ _shop_checkout:
   resource: "@ClubShopBundle/Controller/CheckoutController.php"
   type: annotation
 
+_shop_order:
+  resource: "@ClubShopBundle/Controller/OrderController.php"
+  type: annotation
+
 _admin_shop_product:
   resource: "@ClubShopBundle/Controller/AdminProductController.php"
   type: annotation
